# Learning-OpenCV-3_examples

./: CMakeLists.txt  Exercises_11-1-2-5-6-7.cpp  Exercises_7.cpp  Exercises_8_1.cpp  Exercises_9_1-2-10-11-12-15-16.cpp  README.md  example_02-04.cpp  example_02-10.cpp  example_02-11.cpp  example_09-04.cpp  example_12-03.cpp  example_12-04.cpp  example_14-04.cpp  example_15-01.cpp  example_16-01.cpp  example_16-02.cpp  example_17-02.cpp  example_19-01-Perspective-Transformation.cpp  example_19-01.cpp  example_19-04-with-fitline.cpp  example_19-04.cpp  example_20-02.cpp  example_22-01.cpp  fitline.py  getperspective.py
ml/: CMakeLists.txt  DecisionTree-on-boston-house-prices.cpp  DecisionTree-on-mushroom.cpp  KNN.cpp  README.md  SVM.cpp  moments_demo.cpp  test_gcd.cpp
ml/chapter1/: cv_Mat_1.cpp  cv_Mat_2.cpp  cv_Point.cpp  cv_Rect.cpp  cv_RotateRect.cpp  cv_Vector.cpp
ml/chapter10_dnn/dnn_GOTURN/: dnn_GOTURN.cpp
ml/chapter10_dnn/dnn_TextDetectionModel/: dnn_TextDetectionModel.cpp
ml/chapter10_dnn/dnn_TextRecognitionModel/: dnn_TextRecognitionModel.cpp
ml/chapter10_dnn/dnn_TextSpoting/: dnn_TextSpoting.cpp
ml/chapter10_dnn/dnn_YOLOv4/: dnn_yolov4.cpp
ml/chapter2/: 2-1.cpp  2-2.cpp  2-3.cpp  2-4.cpp  2-5.cpp  2-6.cpp  2-7.cpp  2-8.cpp
ml/chapter4_k-means_KNN/: KNN.cpp  k-means.cpp
ml/chapter5_DecisionTree/: DecisionTree.cpp
ml/chapter6_RandomTrees/: RandomTrees.cpp
ml/chapter7_Boosing/: Boosing.cpp  Boosting_7-2.cpp  boosting_7-2.cpp
ml/chapter8_SVM/: SVM.cpp
ml/chapter9_ANN/: ANN.cpp  function.cpp  function.h  myMnistReader.cpp  myMnistReader.h
(+3 files in other folders)
